# viva_vita

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Taskfile.yml  docker-compose.yaml  poetry.toml  pyproject.toml  setup.py  test.py  wsgi.py
deployment/: deployment.yaml
deployment/core/: frontend_deployment.yaml  web_deployment.yaml  worker_deployment.yaml
deployment/mongodb/: deployment.yaml  secret.yaml
deployment/mongodb/settings/: Chart.yaml
deployment/mongodb/settings/templates/: deployment.yaml
deployment/rabbitmq/: deployment.yaml  secret.yaml
deployment/rabbitmq/settings/: Chart.yaml
deployment/rabbitmq/settings/templates/: deployment.yaml
docker_config/: advanced.config
viva_vdm/: settings.py
viva_vdm/core/: celery_app.py  settings.py
viva_vdm/core/blast/: __init__.py  constants.py  exceptions.py  models.py  wrapper.py
viva_vdm/core/iedb/common/: models.py  predictor_base.py
viva_vdm/core/iedb/mhci/: add_seq_predictor_path.py  constants.py  factory.py  models.py  utils.py  wrapper.py  wrappers.py
viva_vdm/core/models/: __init__.py  models.py
viva_vdm/core/prosite/: __init__.py  exceptions.py  models.py  wrapper.py
viva_vdm/core/tasks/: __init__.py  blast.py  complete_job.py  iedb_mhci.py  iedb_mhcii.py  job.py  prosite.py
viva_vdm/core/workflow/: vita_workflow.py
viva_vdm/utils/: __init__.py  enum_with_equality.py
viva_vdm/v1/: api.py
viva_vdm/v1/endpoints/: __init__.py  job.py  ncbi.py  results.py
viva_vdm/v1/models/: __init__.py  job.py  models.py  ncbi.py  results.py
(+24 files in other folders)
